[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pr_analysis"
version = "0.1.0"
description = "A tool for analyzing GitHub Pull Requests"
readme = "README.md"
authors = [
    {name = "team-mirai", email = "info@example.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "PyGithub>=1.55",
    "pandas>=1.3.0",
    "matplotlib>=3.4.0",
    "openai>=0.27.0",
    "backoff>=2.0.0",
    "tqdm>=4.62.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=21.5b2",
    "isort>=5.9.1",
    "flake8>=3.9.2",
    "mypy>=0.812",
]

[project.scripts]
pr-analyzer = "pr_analysis.cli.analyzer:main"
pr-fetcher = "pr_analysis.cli.fetcher:main"
pr-reporter = "pr_analysis.cli.reporter:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ["py38"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
